<resources>
    <string name="app_name">NewsAPIClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_related_image">news image</string>
    <string name="headline">Headline</string>
    <string name="description">description</string>
    <string name="byline">By line</string>
    <string name="read_more">Read more</string>
    <string name="news_headlines">News Headlines</string>
    <string name="saved_news">Saved News</string>
    <string name="save_news">save news</string>
    <string name="sponsored">sponsored</string>
</resources>