<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/sponsored"
                android:visibility="gone"
                android:gravity="bottom"
                android:textColor="#00F"
                android:background="#Fccc"
                android:layout_margin="1dp"
                android:elevation="10dp"
                android:layout_alignParentBottom="true"
                android:text="sponsored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imageview"
                android:src="@drawable/ic_baseline_article_24"
                android:layout_margin="1dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:scaleType="center"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/news_related_image" />

        </RelativeLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:weightSum="7"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="1dp"
                android:maxLines="2"
                android:text="@string/headline"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:id="@+id/headline"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:background="#CCC"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="1dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_margin="1dp"
                android:id="@+id/description"
                android:text="@string/description"
                android:maxLines="5"
                android:ellipsize="end"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_margin="1dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/black"
                    android:maxLines="2"
                    android:text="@string/byline"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:textStyle="italic|bold"
                    android:gravity="start"
                    android:id="@+id/by_line"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:maxLines="1"
                    android:text="@string/read_more"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>